--- a/functions/package.json
+++ b/functions/package.json
@@ -1,23 +1,15 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "scripts": {
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
-  "engines": {
-    "node": "22"
-  },
+  "engines": { "node": "20" },
   "main": "index.js",
+  "scripts": {
+    "build": "echo \"no build\"",
+    "deploy": "firebase deploy --only functions"
+  },
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
-  },
-  "devDependencies": {
-    "firebase-functions-test": "^3.1.0"
-  },
-  "private": true
+    "firebase-admin": "^12.5.0",
+    "firebase-functions": "^6.0.0",
+    "@sparticuz/chromium": "^123.0.1",
+    "puppeteer-core": "^23.5.0"
+  }
 }
