--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "firebase-admin": "^12.5.0",
     "firebase-functions": "^6.0.0",
-    "@sparticuz/chromium": "^123.0.1",
-    "puppeteer-core": "^23.5.0"
+    "@sparticuz/chromium": "119.0.1",
+    "puppeteer-core": "22.6.4"
   }
 }
