--- a/functions/package.json
+++ b/functions/package.json
@@ -1,15 +1,14 @@
 {
   "name": "functions",
-  "engines": { "node": "20" },
   "main": "index.js",
+  "engines": { "node": "20" },
   "scripts": {
     "build": "echo \"no build\"",
     "deploy": "firebase deploy --only functions"
   },
   "dependencies": {
-    "firebase-admin": "^12.5.0",
     "firebase-functions": "^6.0.0",
-    "@sparticuz/chromium": "119.0.1",
-    "puppeteer-core": "22.6.4"
+    "puppeteer-core": "^22.6.4",
+    "@sparticuz/chromium": "^119.0.0"
   }
 }
